--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -16,6 +16,7 @@
             <md-button ng-click="vm.resumeOperations()" class="md-raised md-primary">Resume Operations</md-button>
             <md-button disabled ng-click="shutdownComputing()" class="md-raised md-primary">Shutdown Computing
             </md-button>
+            <md-button ng-click="vm.toggleFloodLights()" class="md-raised md-primary">Switch Floodlights {{!vm.floodLightSensor.value? 'on' : 'off'}}</md-button>
         </section>
 
         <md-list class="receptor-state-list">
