wip - cam and component build and version information

--- a/app/process-control/process-control.html
+++ b/app/process-control/process-control.html
@@ -1,7 +1,43 @@
-<div flex layout-padding ng-controller="ProcessControlCtrl as vm" style="margin: 16px;">
-    <div class="md-whiteframe-z1">
-        <md-toolbar class="md-toolbar-tools md-whiteframe-z1">
-            <span>Subsystem Process Control</span>
-        </md-toolbar>
+<div flex layout="column" ng-controller="ProcessControlCtrl as vm" style="margin-left: 16px; margin-right: 16px; margin-bottom: 16px; min-width: 1065px">
+    <div class="cam-build-info" layout-align="center center" layout="column">
+        <div flex style="padding: 16px;" class="md-whiteframe-z5" layout="column">
+            <span flex style="text-align: center; font-size: 16px; cursor: pointer;" ng-click="vm.showDetailedCamBuildInfo = !vm.showDetailedCamBuildInfo"
+                  ng-init="vm.showDetailedCamBuildInfo = false">
+                <b>{{::vm.systemConfig.version.description}}</b>
+            </span>
+            <div ng-show="vm.showDetailedCamBuildInfo" layout="column" class="grow-height-animation"
+                style="margin-top: 8px;">
+                <div layout="row" ng-repeat="(key, value) in vm.systemConfig.version">
+                    <span style="width: 140px;">{{::key}}:</span>
+                    <span style="margin-left: 8px;">{{::value}}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <md-toolbar class="md-whiteframe-z1 md-toolbar-tools" layout="row" layout-align="start center">
+        <span>Processes Control, Build and Version Information</span>
+    </md-toolbar>
+
+    <div flex class="md-whiteframe-z1">
+        <div ng-repeat="key in objectKeys(vm.resourcesNames) | orderBy:key track by $index"
+            class="process-control-container">
+            <div flex ng-click="vm.resourcesNames[key].showBuildState = !vm.resourcesNames[key].showBuildState" role="heading"
+                 ng-init="vm.resourcesNames[key].showBuildState = false" class="process-control-bg-transition md-whiteframe-z1"
+                style="padding: 6px" layout="row" ng-class="{'bg-light-grey-0-3': vm.resourcesNames[key].showBuildState}">
+                <span ng-show="!vm.resourcesNames[key].connected" class="red-color" style="width: 160px; margin: 0;"><b>{{::key | uppercase}}</b></span>
+                <span ng-show="vm.resourcesNames[key].connected" class="green-color" style="width: 160px; margin: 0;"><b>{{::key | uppercase}}</b></span>
+                <span>{{::vm.resourcesNames[key].address[0]}}</span>
+                <span style="width: 38px; margin: 0">:{{::vm.resourcesNames[key].address[1]}}</span>
+                <span style="width: 180px;"><i>{{::vm.resourcesNames[key].sensors.api_version.value}}</i></span>
+                <span style="width: 320px;"><i>{{::vm.resourcesNames[key].sensors.build_state.value}}</i></span>
+            </div>
+            <div ng-show="vm.resourcesNames[key].showBuildState" class="grow-height-animation" style="cursor: auto;">
+                <div ng-repeat="(key, sensor) in vm.resourcesNames[key].sensors | orderBy:'name' track by key"
+                    style="margin: 4px;">
+                    <div style="text-align: end; width: 230px; display: inline-block"><span>{{::sensor.name}}:</span></div>
+                    <div style="display: inline-block; margin-left: 4px;"><span><b>{{::sensor.value}}</b></span></div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
