--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -6,12 +6,15 @@
 
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('alarms')">Alarms</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('operator-control')">Operator Control</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('process-control')">Process Control</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('scheduler')" >Scheduler</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensor-graph')">Sensor Graphs</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensor-list')">Sensor list</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('weather')">Weather</md-button>
+    </div>
+    <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('operator-control')">Operator Control</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('process-control')">Process Control</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('cam-components')">CAM Components</md-button>
     </div>
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('customHealth')">Custom Health</md-button>
