added list titles for cam components

--- a/app/cam-components/cam-components.html
+++ b/app/cam-components/cam-components.html
@@ -14,8 +14,26 @@
             </div>
         </div>
     </div>
-    <md-toolbar class="md-whiteframe-z1 md-toolbar-tools md-toolbar-tools-medium" layout="row" layout-align="start center">
-        <span>TBD</span>
+    <md-toolbar class="md-whiteframe-z1 md-toolbar-tools" layout="row" layout-align="start center">
+        <span style="margin-top: -5px;">CAM Components - Versions and Build State</span>
+        <div flex class="unselectable list-subheader-title" layout="row" layout-align="center center"
+            style="position: absolute; left: 0; bottom: 0; padding-left: 6px;">
+            <span style="width: 160px;" class="subheader-text">
+                Component
+            </span>
+            <span style="width: 110px; margin-left: 16px;" class="subheader-text">
+                IP:Port
+            </span>
+            <span style="width: 180px; margin-left: 16px;" class="subheader-text">
+                Version
+            </span>
+            <span flex style="margin-left: 16px;" class="subheader-text">
+                Build State
+            </span>
+            <span style="margin-right: 6px;" class="subheader-text">
+                Actions
+            </span>
+        </div>
     </md-toolbar>
 
     <div class="md-whiteframe-z1" md-theme="{{themePrimaryButtons}}">
