--- a/app/process-control/process-control.html
+++ b/app/process-control/process-control.html
@@ -1,11 +1,18 @@
 <div flex layout="row" ng-controller="ProcessControlCtrl as vm" style="margin-left: 16px; margin-right: 16px; margin-bottom: 16px; min-width: 600px">
     <div flex ng-repeat="nm_key in objectKeys(vm.detailedProcesses) | orderBy:nm_key track by nm_key" style="margin: 16px; min-width: 500px;">
         <md-toolbar class="md-whiteframe-z1 md-toolbar-tools md-toolbar-tools-medium" layout="row" layout-align="start center"
-                    ng-click="vm[nm_key + 'showDetails'] = !vm[nm_key + 'showDetails']" ng-init="vm[nm_key + 'showDetails'] = true">
-            <span>{{nm_key | uppercase}} Processes</span>
+                    ng-init="vm[nm_key + 'showDetails'] = true">
+            <span flex>{{nm_key | uppercase}} Processes</span>
+
+            <md-button ng-click="vm.collapseAll(nm_key)" title="Collapse All" class="inline-action-button no-margin-no-padding">
+                <i class="fa fa-minus-square-o"></i>
+            </md-button>
+            <md-button ng-click="vm.expandAll(nm_key)" title="Expand All" class="inline-action-button no-margin-no-padding">
+                <i class="fa fa-plus-square-o"></i>
+            </md-button>
         </md-toolbar>
 
-        <div ng-if="vm[nm_key + 'showDetails']" class="md-whiteframe-z1" md-theme="{{themePrimaryButtons}}">
+        <div class="md-whiteframe-z1" md-theme="{{themePrimaryButtons}}">
             <div ng-repeat="key in objectKeys(vm.detailedProcesses[nm_key]) | orderBy:key track by key"
                  class="process-control-container">
                 <div flex ng-click="vm.detailedProcesses[nm_key][key].showDetail = !vm.detailedProcesses[nm_key][key].showDetail" role="heading"
