fixed tooltips not always in correct pos

--- a/app/health/receptor-health/receptor-health.html
+++ b/app/health/receptor-health/receptor-health.html
@@ -21,7 +21,7 @@
         <div md-theme="{{themePrimary}}" class="" layout="row" layout-align="start center" class="md-toolbar-tools-small">
 
             <span flex></span>
-            <md-select ng-model="vm.mapType" style="margin-top: 0px; margin-left: 4px; margin-right:8px;"
+            <md-select ng-model="vm.mapType" style="margin-top: 0px; margin-left: 4px; margin-right:8px; padding: 0"
                        class="md-primary" md-theme="{{themePrimaryButtons}}">
                 <md-option ng-value="type" ng-repeat="type in vm.mapTypes">{{type}}</md-option>
             </md-select>
