--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -25,6 +25,7 @@
     </div>
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
         <md-button class="md-raised md-primary" ng-click="vm.openCentralLogger()">Central Logger</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.openCentralLogger()">Kat Sniffer</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('admin')">User Administration</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('config')">KATGUI Configuration</md-button>
     </div>
