--- a/index.html
+++ b/index.html
@@ -224,10 +224,16 @@
                     </md-item-content>
                 </md-item>
                 <md-item>
-                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.openCentralLogger()"
-                                     style="border-bottom: 1px solid #e5e5e5;">
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.openCentralLogger()">
                         <span class="fa fa-file-text-o"></span>
                         <button>Central Logger</button>
+                    </md-item-content>
+                </md-item>
+                <md-item>
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.openKatsnifferLogger()"
+                                     style="border-bottom: 1px solid #e5e5e5;">
+                        <span class="fa fa-file-text-o"></span>
+                        <button>Katsniffer Logger</button>
                     </md-item-content>
                 </md-item>
                 <md-item>
