--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     </md-item-content>
                 </md-item>
                 <md-item>
-                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.openKatsnifferLogger()"
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.openKatsnifferLogger('katcpmsgs.log')"
                                      style="border-bottom: 1px solid #e5e5e5;">
                         <span class="fa fa-file-text-o"></span>
                         <button>Katsniffer Logger</button>
